Fixed Facebook signin button alignment to match logo

--- a/www/styles/modules/header/public.styl
+++ b/www/styles/modules/header/public.styl
@@ -15,4 +15,4 @@
 	.button
 		position absolute
 		right 0
-		top 30px
+		top 20px
